--- a/changes.txt
+++ b/changes.txt
@@ -1,6 +1,7 @@
 0.2.14 - 2007-04-
 ===================
-
+- corrected bug in js validation (add 0 before h:mm)
+- Added trans-day event
 
 0.2.13 - 2007-04-26
 ===================
