--- a/changes.txt
+++ b/changes.txt
@@ -2,6 +2,8 @@
 ===================
 - corrected bug in js validation (add 0 before h:mm)
 - Added trans-day event
+- added Atom 1.0 feed
+- some code cleaning (charset)
 
 0.2.13 - 2007-04-26
 ===================
