--- a/changes.txt
+++ b/changes.txt
@@ -1,9 +1,15 @@
-0.2.14 - 2007-04-
-===================
+0.2.14 - 2007-09-11 rev. 17
+===========================
+- implementation of nonce-based authentication : no password is sent in clear text
+- Added prev/next in gantt head
+- Added names in HTML templates
+- JS message for trans-day event
+- Added documentation
 - corrected bug in js validation (add 0 before h:mm)
 - Added trans-day event
 - added Atom 1.0 feed
 - some code cleaning (charset)
+- Use Subversion
 
 0.2.13 - 2007-04-26
 ===================
