--- a/changes.txt
+++ b/changes.txt
@@ -1,14 +1,19 @@
+0.2.15 - 2007-09-18 rev. 20
+===========================
+- Added dutch (nl) language (bert.fransen @ sygma.nl)
+- Fixed bug on date check
+
 0.2.14 - 2007-09-11 rev. 17
 ===========================
-- implementation of nonce-based authentication : no password is sent in clear text
+- Implementation of nonce-based authentication : no password is sent in clear text
 - Added prev/next in gantt head
 - Added names in HTML templates
 - JS message for trans-day event
 - Added documentation
-- corrected bug in js validation (add 0 before h:mm)
+- Corrected bug in js validation (add 0 before h:mm)
 - Added trans-day event
-- added Atom 1.0 feed
-- some code cleaning (charset)
+- Added Atom 1.0 feed
+- Some code cleaning (charset)
 - Use Subversion
 
 0.2.13 - 2007-04-26
